--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -5,6 +5,7 @@
 		<description></description >
 		<role-name>admin</role-name>
 	</security-role>
+    
 	<security-constraint>
 		<display-name>WebMarket Security_01</display-name>
 		<web-resource-collection>
@@ -19,6 +20,7 @@
 			<role-name>admin</role-name>
 		</auth-constraint>
 	</security-constraint>
+    
     <login-config>
 		<auth-method>FORM</auth-method>
 		<form-login-config>
@@ -26,8 +28,18 @@
 			<form-error-page>/login/login_failed.jsp</form-error-page>
 		</form-login-config>
 	</login-config>
+    
     <error-page>
 		<error-code>404</error-code>
 		<location>/exception/main_server_downtime.jsp</location>
 	</error-page>
+    <servlet>
+		<servlet-name>BoardController</servlet-name>
+		<servlet-class>mvc.controller.Board_controller</servlet-class>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>BoardController</servlet-name>
+		<url-pattern>*.do</url-pattern>
+	</servlet-mapping>
 </web-app>
